@@ -1,6 +1,6 @@
 {% load table_block_tags %}
 
-<table role="table">
+<table>
     {% if table_caption %}
        <caption>{{ table_caption }}</caption>
     {% endif %}
